--- a/index.html
+++ b/index.html
@@ -391,10 +391,10 @@ ol.d {
 <p>Move the mouse over the image below to open the dropdown content.</p>
 
 <div class="dropdown">
-  <img src="./images/photo_2024-09-20_15-13-20.jpg" alt="Cinque Terre" width="100" height="50">
+  <img src="./images/photo_2022-05-09_13-34-09.jpg" alt="Cinque Terre" width="100" height="50">
   <div class="dropdown-content">
-  <img src="./images/photo_2024-09-20_15-13-20.jpg" alt="Cinque Terre" width="300" height="200">
-  <div class="desc">Beautiful cat</div>
+  <img src="./images/photo_2022-05-09_13-34-09.jpg" alt="Cinque Terre" width="300" height="200">
+  <div class="desc">Cherepaha</div>
   </div>
 </div>
 <h1>CSS background-color пример!</h1>
@@ -444,7 +444,7 @@ ol.d {
 <div class="model">Этот бессмысленный текст является содержимым блока. Мы добавили отступ 50 пикселей, поле 20 пикселей и зеленую границу 15 пикселей. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
 
 <h2>Расчёт общей ширины:</h2>
-<img src="./images/photo_2024-09-20_15-13-20.jpg" width="350" height="263" alt="Klematis">
+<img src="./images/photo_2022-05-09_13-34-09.jpg" width="350" height="263" alt="Klematis">
 <div>Изображение выше имеет ширину 350 пикселей. Общая ширина этого элемента также 350 пикселей.</div>
 
 <h2>CSS Ссылки</h2>
